[tool.poetry]
name = "account-transactions"
version = "0.1.0"
description = ""
authors = ["KirSouL <Sokil-Ki-So@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
